# http-collector

./: Cargo.toml  README.md
src/: error.rs  http.rs  main.rs
test-cases/: invalid-http-post  valid-http-post
tests/: http.rs
