[package]
name = "http-collector"
description = "Collect and analyse incoming HTTP/TCP traffic"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Douile/http-collector"
license = "MIT"
license-file = "LICENSE"
categories = [ "command-line-utilities" ]
readme = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
