[package]
name = "http-collector"
description = "Collect and analyse incoming HTTP/TCP traffic"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Douile/http-collector"
license = "MIT"
categories = [ "command-line-utilities" ]
readme = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "json" ]
json = [ "serde", "serde_json" ]

[dependencies]
clap = "2.33"
serde = { version = "1.0", optional = true, features = [ "derive" ] }
serde_json = { version = "1.0", optional = true }
